--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.9",
     "html2canvas": "^1.4.1",
     "pinia": "^3.0.2",
