--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "node-cron": "^4.2.1",
     "rss-parser": "^3.13.0"
